[package]
authors = ["Michael Lass <bevan@bi-co.net>"]
build = "build.rs"
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
description = "Low level bindings for libe2p (e2fsprogs/e2fslibs), providing functionality for ext2/ext3/ext4 filesystems"
edition = "2021"
homepage = "https://github.com/michaellass/e2p-sys/"
keywords = ["e2fsprogs", "e2fslibs", "ext2", "ext3", "ext4"]
license = "MIT"
links = "e2p"
name = "e2p-sys"
publish = false
readme = "README.md"
repository = "https://github.com/michaellass/e2p-sys.git"
version = "0.1.0"

[badges]
travis-ci = { repository = "michaellass/e2p-sys", branch = "master" }

[build-dependencies]
bindgen = { version = "0.60", default-features = false, features = ["runtime"] }
metadeps = "^1.1.2"
regex = "^1.3.9"

[package.metadata.pkg-config]
e2p = "*"
